creacion boton de menu responsivo

--- a/index.html
+++ b/index.html
@@ -17,6 +17,14 @@
             <div class="logo">
                 <p class="iconoLogo"><a href=""><small>{</small>JoLuu<small>}</small></a></p>
             </div>
+
+            <div class="menu-toggle">
+                <div class="bar1"></div>
+                <div class="bar2"></div>
+                <div class="bar3_h"></div>
+                <div class="bar4"></div>
+            </div>
+
             <ul class="menu">
 
                 <li><a href="#about"> About me</a></li>
@@ -36,8 +44,8 @@
                 <h1>Hi! I am <p &nbsp class="auto-type"></p>
                 </h1><br>
 
-              
-                <h2 >Currently studing System Enginnering, I am a Software and Web Developer
+
+                <h2>Currently studing System Enginnering, I am a Software and Web Developer
                     with experience in front-end and back-end technologies. I am passionate about learning new
                     technologies and programming languages. I am a person who likes to work in a team and I am
                     always willing to help others.
