Cambio de Letra

--- a/index.html
+++ b/index.html
@@ -126,9 +126,7 @@
                             <button class="btn-view">view</button></a>
                     </div>
                 </div>
-                <a href="project.html"><button class="btn-see-more">See more Projects 👉<br>
-
-                    </button></a>
+                <a href="project.html"><button class="btn-see-more">See more Projects 👉</button></a>
             </div>
 
         </section>
