cambio de fuente, cambio de icono de java por .net

--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
 
                     </div>
                     <div class="skill">
-                        <img class="skills-img" src="assets/skills/java.png" alt="">
+                        <img class="skills-img" src="assets/skills/net.png" alt="">
 
                     </div>
                     <div class="skill">
